<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.auth_fragments.LoginFragment">

   <ImageView
       android:id="@+id/logo_image"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       android:src="@drawable/logo"
       android:layout_marginTop="90dp"
       android:contentDescription="@string/todo" />

   <ImageView
       android:id="@+id/log"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       app:layout_constraintTop_toBottomOf="@id/logo_image"
       app:layout_constraintStart_toStartOf="parent"
       android:layout_marginStart="36dp"
       android:layout_marginTop="25dp"
       android:src="@drawable/log_to_your_account"
       android:contentDescription="@string/todo"/>

   <TextView
       android:id="@+id/email_txt"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       app:layout_constraintTop_toBottomOf="@id/log"
       app:layout_constraintStart_toStartOf="parent"
       android:textStyle="italic"
       android:textColor="@color/black"
       android:layout_marginStart="26dp"
       android:layout_marginTop="20dp"
       android:textSize="18sp"
       android:text="@string/email"/>

   <com.google.android.material.textfield.TextInputLayout
       android:id="@+id/email_tnl"
       android:layout_width="387dp"
       android:layout_height="36dp"
       app:layout_constraintTop_toBottomOf="@id/email_txt"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       >
      <com.google.android.material.textfield.TextInputEditText
          android:layout_width="match_parent"
          android:layout_height="match_parent" />
   </com.google.android.material.textfield.TextInputLayout>

   <TextView
       android:id="@+id/pass_txt"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       app:layout_constraintTop_toBottomOf="@id/email_tnl"
       app:layout_constraintStart_toStartOf="parent"
       android:textStyle="italic"
       android:textColor="@color/black"
       android:layout_marginStart="26dp"
       android:layout_marginTop="20dp"
       android:textSize="18sp"
       android:text="@string/password"/>

   <com.google.android.material.textfield.TextInputLayout
       android:id="@+id/pass_tnl"
       android:layout_width="387dp"
       android:layout_height="36dp"
       app:layout_constraintTop_toBottomOf="@id/pass_txt"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       >
      <com.google.android.material.textfield.TextInputEditText
          android:layout_width="match_parent"
          android:layout_height="match_parent" />
   </com.google.android.material.textfield.TextInputLayout>
   
   
   <Button
       android:id="@+id/login_btn"
       android:layout_width="387dp"
       android:layout_height="46dp"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toBottomOf="@id/pass_tnl"
       android:layout_marginTop="50dp"
       android:textColor="@color/white"
       android:text="@string/login"
       android:textSize="18sp"/>

   <TextView
       android:id="@+id/create_account_txt"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@id/login_btn"
       android:layout_marginTop="15dp"
       android:layout_marginStart="30dp"
       android:textSize="18sp"
       android:textStyle="italic"
       android:textColor="@color/black"
       android:text="@string/create_account"/>
</androidx.constraintlayout.widget.ConstraintLayout>