<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
 android:layout_marginTop="20dp"
    android:layout_marginBottom="60dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.Fragment.SettingFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/system_ic"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/baseline_devices_24"
                android:layout_marginStart="20dp"
                android:paddingTop="8dp"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/system_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:paddingTop="5dp"
                android:text="@string/system"
                android:textSize="18dp"

                app:layout_constraintStart_toEndOf="@id/system_ic" />
            <ImageView
                android:id="@+id/account_ic"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/baseline_personk_outline_24"
                android:paddingTop="8dp"
                android:layout_marginTop="15dp"
                android:layout_marginStart="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/system_tv"
                />

            <TextView
                android:id="@+id/account_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="19dp"
                android:text="@string/account"
                android:textSize="18dp"
                app:layout_constraintStart_toEndOf="@id/language_ic"
                app:layout_constraintTop_toBottomOf="@+id/system_tv" />
            <ImageView
                android:id="@+id/rateapp_ic"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/baseline_stark_border_24"
                android:paddingTop="12dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/account_tv"
                />
            <TextView
                android:id="@+id/rateapp_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rate_app"
                android:textSize="18dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/account_tv"
                app:layout_constraintStart_toEndOf="@id/rateapp_ic"
                />
            <ImageView
                android:id="@+id/shareapp_ic"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/baseline_share_24"
                android:paddingTop="8dp"
                android:layout_marginTop="15dp"
                android:layout_marginStart="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rateapp_tv"
                />
            <TextView
                android:id="@+id/shareapp_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share_app"
                android:textSize="18dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/rateapp_tv"
                app:layout_constraintStart_toEndOf="@id/shareapp_ic"
                />
            <!--
            <ImageView
                android:id="@+id/help_ic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_help_outline_24"
                android:paddingTop="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/account_tv"
                />

            <TextView
                android:id="@+id/help_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help"
                android:textSize="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="21dp"
                app:layout_constraintTop_toBottomOf="@+id/account_tv"
                app:layout_constraintStart_toEndOf="@id/help_ic"
                />


                -->

            <View
                android:id="@+id/view1_id"
                android:layout_width="match_parent"
                android:layout_height="8dp"
                app:layout_constraintTop_toBottomOf="@+id/shareapp_tv"
                android:layout_marginTop="40dp"
                android:background="#EAE7E7"
                />

            <ImageView
                android:id="@+id/language_ic"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/baseline_language_24"
                android:layout_marginTop="22dp"
                android:layout_marginStart="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view1_id"
                />

            <TextView
                android:id="@+id/language_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/language"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                app:layout_constraintTop_toBottomOf="@+id/view1_id"
                app:layout_constraintStart_toEndOf="@id/language_ic"
                />
            <Button
                android:id="@+id/eng_btn"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/english"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/language_tv"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="30dp"
                android:backgroundTint="#FFFF"
                android:textColor="#00668B"
                android:textSize="18dp"
                />
            <Button
                android:id="@+id/arb_btn"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/arabic"
                app:layout_constraintTop_toBottomOf="@+id/eng_btn"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="30dp"
                android:backgroundTint="#FFFF"
               android:textColor="#00668B"
                android:textSize="18dp"
                />

            <View
                android:id="@+id/view_id"
                android:layout_width="match_parent"
                android:layout_height="8dp"
                app:layout_constraintTop_toBottomOf="@+id/arb_btn"
                android:layout_marginTop="20dp"
                android:background="#EAE7E7"
                />
            <TextView
                android:id="@+id/login_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Login"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view_id"
                android:textSize="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginStart="20dp"
                android:textStyle="bold"
                />
            <Button
                android:id="@+id/addacount_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/login_tv"
                app:layout_constraintStart_toStartOf="parent"
                android:textSize="18dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="5dp"
                android:text="@string/add_account"
                android:textColor="@color/bounding_box_color"
                android:backgroundTint="#FFF"
                />

            <Button
                android:id="@+id/logout1_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/addacount_btn"
                app:layout_constraintStart_toStartOf="parent"
                android:textSize="18dp"
                android:layout_marginStart="5dp"
                android:text="@string/log_out"
                android:textColor="#B00020"
                android:backgroundTint="#FFF"
                />
            <Button
                android:id="@+id/logout2_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/logout1_btn"
                app:layout_constraintStart_toStartOf="parent"
                android:textSize="18dp"

                android:layout_marginStart="5dp"
                android:text="@string/log_out_all_accounts"
                android:textColor="#B00020"
                android:backgroundTint="#FFF"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>