<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.auth_fragments.RegisterFragment">

<ImageView
    android:id="@+id/logo_image"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginTop="5dp"
    android:src="@drawable/logo"
    android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/logo_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/create_your_accout"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/full_name_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/create_account"
        app:layout_constraintStart_toStartOf="parent"
        android:textStyle="italic"
        android:textColor="@color/black"
        android:layout_marginStart="26dp"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:text="@string/fullname"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/full_name_tnl"
        android:layout_width="387dp"
        android:layout_height="36dp"
        app:layout_constraintTop_toBottomOf="@id/full_name_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/email_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/full_name_tnl"
        app:layout_constraintStart_toStartOf="parent"
        android:textStyle="italic"
        android:textColor="@color/black"
        android:layout_marginStart="26dp"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:text="@string/email"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_tnl"
        android:layout_width="387dp"
        android:layout_height="36dp"
        app:layout_constraintTop_toBottomOf="@id/email_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/pass_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/email_tnl"
        app:layout_constraintStart_toStartOf="parent"
        android:textStyle="italic"
        android:textColor="@color/black"
        android:layout_marginStart="26dp"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:text="@string/password"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pass_tnl"
        android:layout_width="387dp"
        android:layout_height="36dp"
        app:layout_constraintTop_toBottomOf="@id/pass_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/confirm_pass_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/pass_tnl"
        app:layout_constraintStart_toStartOf="parent"
        android:textStyle="italic"
        android:textColor="@color/black"
        android:layout_marginStart="26dp"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:text="@string/confirm_password"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirm_pass_tnl"
        android:layout_width="387dp"
        android:layout_height="36dp"
        app:layout_constraintTop_toBottomOf="@id/confirm_pass_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/phone_number_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/confirm_pass_tnl"
        app:layout_constraintStart_toStartOf="parent"
        android:textStyle="italic"
        android:textColor="@color/black"
        android:layout_marginStart="26dp"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:text="@string/phone_number"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phone_number_tnl"
        android:layout_width="387dp"
        android:layout_height="36dp"
        app:layout_constraintTop_toBottomOf="@id/phone_number_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/policy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/phone_number_tnl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="3dp"
        android:src="@drawable/privacy"/>

    <Button
        android:id="@+id/sign_up_btn"
        android:layout_width="387dp"
        android:layout_height="46dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/policy"

        android:textColor="@color/white"
        android:text="@string/sign_up"
        android:textSize="18sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>