<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Fragment.RattingActivity">

    <ImageView
        android:id="@+id/ic"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="52dp"
        android:textSize="30dp"
        android:src="@drawable/baseline_keyboard_arrow_left_24"
        android:layout_marginStart="20dp"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/rateus_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/ic"
        app:layout_constraintTop_toTopOf="parent"
       android:layout_marginTop="50dp"
        android:text="@string/rate_us"
        android:textSize="20dp"
        android:textStyle="bold"
        />
    <RatingBar
        android:id="@+id/ratingbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ic"
        android:paddingTop="30dp"
        android:numStars="5"
        android:rating="0"
        android:layout_marginTop="15dp"
        android:stepSize="1"
        android:progressTint="#FFBB33"
        android:scaleX="0.8"
        android:scaleY="0.8"


        />
    <TextView
        android:id="@+id/textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" "
        android:textSize="18dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingbar"

        />

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tap_on_the_stars_and_rate_your_experience"
        android:textSize="18dp"
        android:textColor="#5C5F61"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview" />

    <TextView
        android:id="@+id/comment_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text"
        android:text="@string/comment_optional"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        android:layout_marginStart="25dp"
        />
    <EditText
        android:id="@+id/textcomment"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:text=" "
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/comment_tv"
        android:layout_marginTop="15dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:background="#EFECEB"
        />
    <Button
        android:id="@+id/submitt2btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textcomment"
        android:text="@string/submit"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:textSize="20dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>